adding spyder and useful python libraries

--- a/environment.yml
+++ b/environment.yml
@@ -4,3 +4,11 @@ dependencies:
   - websockify
   - pip:
     - .
+name: base
+channels:
+  - defaults
+dependencies:
+  - spyder
+  - numpy
+  - pandas
+  - matplotlib
